--- a/archive.html
+++ b/archive.html
@@ -117,21 +117,21 @@
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen">
     <!-- Skip to main content link -->
-    <a href="#main-content" class="sr-only focus:w-auto focus:h-auto focus:p-4 focus:m-0 focus:overflow-visible focus:clip-auto focus:whitespace-normal focus:border-0 focus:absolute focus:top-4 focus:left-4 focus:z-50 focus:bg-indigo-600 focus:text-white focus:rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+    <a href="#main-content" class="sr-only focus:w-auto focus:h-auto focus:p-4 focus:m-0 focus:overflow-visible focus:clip-auto focus:whitespace-normal focus:border-0 focus:absolute focus:top-4 focus:left-4 focus:z-50 focus:bg-indigo-700 focus:text-white focus:rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2">
         Skip to main content
     </a>
     <main class="container mx-auto px-4 py-8 max-w-4xl" id="main-content">
         <header class="mb-8">
             <nav class="flex items-center justify-between mb-4" aria-label="Page navigation">
-                <a href="index.html" class="text-indigo-600 hover:text-indigo-800 font-semibold">
+                <a href="index.html" class="text-indigo-700 hover:text-indigo-900 font-semibold">
                     ← Back to Home
                 </a>
-                <a href="index.html" class="text-indigo-600 hover:text-indigo-800 font-semibold">
+                <a href="index.html" class="text-indigo-700 hover:text-indigo-900 font-semibold">
                     Today's Puzzle →
                 </a>
             </nav>
             <h1 class="text-3xl md:text-4xl font-bold text-indigo-900 mb-2">Puzzle Archive</h1>
-            <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-600 font-semibold"></p>
+            <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-700 font-semibold"></p>
         </header>
 
         <!-- Date Picker -->
@@ -142,10 +142,10 @@
             <div class="flex items-center justify-center gap-4">
                 <button 
                     id="date-prev-btn"
-                    class="p-2 text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 transition-colors"
+                    class="p-2 text-indigo-700 hover:text-indigo-900 hover:bg-indigo-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 transition-colors"
                     aria-label="Previous day"
                 >
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
                     </svg>
                 </button>
@@ -157,7 +157,7 @@
                 />
                 <button 
                     id="date-next-btn"
-                    class="p-2 text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 transition-colors"
+                    class="p-2 text-indigo-700 hover:text-indigo-900 hover:bg-indigo-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 transition-colors"
                     aria-label="Next day"
                 >
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -179,13 +179,13 @@
     </main>
 
     <!-- Success Modal -->
-    <div id="archive-success-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden" role="dialog" aria-modal="true" aria-labelledby="archive-modal-title">
+    <div id="archive-success-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden" role="dialog" aria-modal="true" aria-labelledby="archive-modal-title" aria-describedby="archive-share-message-container">
 
         <div class="bg-white rounded-lg shadow-xl p-8 max-w-md w-full mx-4 relative">
 
-            <button id="archive-close-success-modal" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1" aria-label="Close modal">
+            <button id="archive-close-success-modal" class="absolute top-4 right-4 text-gray-600 hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1" aria-label="Close modal">
 
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
 
@@ -195,7 +195,7 @@
 
             <h2 id="archive-modal-title" class="text-3xl font-bold text-indigo-900 mb-4 text-center">You solved the puzzle!</h2>
 
-            <p id="archive-hints-used-message" class="text-center text-gray-600 mb-4"></p>
+            <p id="archive-hints-used-message" class="text-center text-gray-700 mb-4"></p>
 
             <div id="archive-share-message-container" class="mb-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
 
@@ -205,7 +205,7 @@
 
             <div class="flex justify-center gap-4">
 
-                <button id="archive-share-btn" class="px-8 py-3 bg-amber-600 text-white font-semibold rounded-lg hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-amber-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
+                <button id="archive-share-btn" class="px-8 py-3 bg-amber-700 text-white font-semibold rounded-lg hover:bg-amber-800 focus:outline-none focus:ring-2 focus:ring-amber-600 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition-colors">
 
                     Copy
 
@@ -218,19 +218,19 @@
     </div>
 
     <!-- Error Modal -->
-    <div id="archive-error-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="archive-error-modal-title">
+    <div id="archive-error-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="archive-error-modal-title" aria-describedby="archive-error-modal-message">
         <div class="bg-white rounded-lg shadow-xl p-8 max-w-md w-full mx-4 relative">
             <button 
                 id="archive-close-error-modal"
-                class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1"
+                class="absolute top-4 right-4 text-gray-600 hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1"
                 aria-label="Close modal"
             >
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                 </svg>
             </button>
             <h2 id="archive-error-modal-title" class="text-3xl font-bold text-red-900 mb-4 text-center">Not quite right</h2>
-            <p class="text-lg text-red-800 mb-6 text-center">Try again!</p>
+            <p id="archive-error-modal-message" class="text-lg text-red-800 mb-6 text-center">Try again!</p>
             <div class="flex justify-center">
                 <button 
                     id="archive-close-error-modal-btn"
@@ -269,8 +269,8 @@
         });
     </script>
 
-    <footer class="text-center py-6 text-gray-400 text-xs">
-        © <a href="https://bobbieallsop.co.uk" target="_blank" rel="noopener noreferrer" class="underline hover:text-gray-300 transition-colors">Bobbie Allsop</a> created Dec 2025
+    <footer class="text-center py-6 text-gray-700 text-xs">
+        © <a href="https://bobbieallsop.co.uk" target="_blank" rel="noopener noreferrer" class="underline hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded transition-colors">Bobbie Allsop</a> created Dec 2025
     </footer>
 </body>
 </html>
