--- a/puzzle.html
+++ b/puzzle.html
@@ -176,20 +176,20 @@
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen">
     <!-- Skip to main content link -->
-    <a href="#main-content" class="sr-only focus:w-auto focus:h-auto focus:p-4 focus:m-0 focus:overflow-visible focus:clip-auto focus:whitespace-normal focus:border-0 focus:absolute focus:top-4 focus:left-4 focus:z-50 focus:bg-indigo-600 focus:text-white focus:rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+    <a href="#main-content" class="sr-only focus:w-auto focus:h-auto focus:p-4 focus:m-0 focus:overflow-visible focus:clip-auto focus:whitespace-normal focus:border-0 focus:absolute focus:top-4 focus:left-4 focus:z-50 focus:bg-indigo-700 focus:text-white focus:rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2">
         Skip to main content
     </a>
     <main class="container mx-auto px-4 py-8 max-w-4xl" id="main-content">
         <header class="mb-8">
             <nav class="flex items-center justify-between mb-4" aria-label="Page navigation">
-                <a href="index.html" id="back-link" class="text-indigo-600 hover:text-indigo-800 font-semibold inline-block">
+                <a href="index.html" id="back-link" class="text-indigo-700 hover:text-indigo-900 font-semibold inline-block">
                     ← Back to Calendar
                 </a>
-                <a href="archive.html" id="archive-link" class="text-indigo-600 hover:text-indigo-800 font-semibold inline-block hidden">
+                <a href="archive.html" id="archive-link" class="text-indigo-700 hover:text-indigo-900 font-semibold inline-block hidden">
                     View Archive →
                 </a>
             </nav>
-            <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-600 font-semibold"></p>
+            <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-700 font-semibold"></p>
             <div class="flex items-center justify-between mb-2">
                 <h1 class="text-3xl md:text-4xl font-bold text-indigo-900" id="puzzle-title">
                     <!-- Title will be set by JavaScript -->
@@ -233,13 +233,13 @@
         <div class="mb-8 flex flex-col sm:flex-row gap-4">
             <button
                 id="hint-btn"
-                class="w-full md:w-auto px-8 py-3 bg-amber-600 text-white font-semibold rounded-lg hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-amber-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
+                class="w-full md:w-auto px-8 py-3 bg-amber-700 text-white font-semibold rounded-lg hover:bg-amber-800 focus:outline-none focus:ring-2 focus:ring-amber-600 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
             >
                 Get Hint
             </button>
             <button 
                 id="submit-btn" 
-                class="w-full md:w-auto px-8 py-3 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition-colors"
+                class="w-full md:w-auto px-8 py-3 bg-indigo-700 text-white font-semibold rounded-lg hover:bg-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2 transition-colors"
             >
                 Submit Solution
             </button>
@@ -252,26 +252,26 @@
     </main>
 
     <!-- Success Modal -->
-    <div id="success-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+    <div id="success-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="modal-title" aria-describedby="share-message-container">
         <div class="bg-white rounded-lg shadow-xl p-8 max-w-md w-full mx-4 relative">
             <button 
                 id="close-success-modal"
-                class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1"
+                class="absolute top-4 right-4 text-gray-700 hover:text-gray-800 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1"
                 aria-label="Close modal"
             >
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                 </svg>
             </button>
             <h2 id="modal-title" class="text-3xl font-bold text-indigo-900 mb-4 text-center">You solved the puzzle!</h2>
-            <p id="hints-used-message" class="text-center text-gray-600 mb-4"></p>
+            <p id="hints-used-message" class="text-center text-gray-700 mb-4"></p>
             <div id="share-message-container" class="mb-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
                 <p id="share-message" class="text-sm text-gray-700 whitespace-pre-wrap break-words"></p>
             </div>
             <div class="flex justify-center gap-4">
                 <button
                     id="share-btn"
-                    class="px-8 py-3 bg-amber-600 text-white font-semibold rounded-lg hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-amber-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
+                    class="px-8 py-3 bg-amber-700 text-white font-semibold rounded-lg hover:bg-amber-800 focus:outline-none focus:ring-2 focus:ring-amber-600 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
                 >
                     Copy
                 </button>
@@ -280,7 +280,7 @@
     </div>
 
     <!-- Help Modal -->
-    <div id="help-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="help-modal-title">
+    <div id="help-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="help-modal-title" aria-describedby="help-modal-content">
         <div class="bg-white rounded-lg shadow-xl max-w-2xl w-full mx-4 max-h-[90vh] flex flex-col">
             <!-- Sticky Header -->
             <div class="sticky top-0 bg-white rounded-t-lg border-b border-gray-200 px-6 md:px-8 pt-6 md:pt-8 pb-4 z-10">
@@ -288,7 +288,7 @@
                     <h2 id="help-modal-title" class="text-2xl font-bold text-indigo-900">How to Play</h2>
                     <button 
                         id="close-help-modal"
-                        class="text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1"
+                        class="text-gray-600 hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1"
                         aria-label="Close modal"
                     >
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -326,7 +326,7 @@
                     <h3 class="text-lg font-semibold text-indigo-900 mb-3">2. Drag Tiles to Slots</h3>
                     <p class="text-indigo-900 mb-3">Click and drag tiles from the top container into the word slots below.</p>
                     <div class="flex items-center gap-4 mb-2 flex-wrap">
-                        <div class="bg-indigo-600 text-white rounded-lg p-3 w-12 h-14 flex flex-col items-center justify-center shadow-md relative">
+                        <div class="bg-indigo-700 text-white rounded-lg p-3 w-12 h-14 flex flex-col items-center justify-center shadow-md relative">
                             <div class="text-2xl font-bold">T</div>
                             <div class="text-xs mt-1 opacity-90">1</div>
                             <!-- Drag cursor indicator -->
@@ -337,12 +337,12 @@
                             </div>
                         </div>
                         <!-- Arrow SVG -->
-                        <svg class="w-8 h-8 text-indigo-600 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <svg class="w-8 h-8 text-indigo-700 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
                         </svg>
                         <!-- Empty slot -->
                         <div class="w-12 h-14 rounded-lg flex items-center justify-center border-2 border-dashed border-gray-300 bg-gray-50">
-                            <span class="text-gray-400 text-xs">Slot</span>
+                            <span class="text-gray-700 text-xs">Slot</span>
                         </div>
                     </div>
                     <p class="text-sm text-indigo-900">You can also click a tile, then click a slot to place it. Use keyboard navigation for accessibility.</p>
@@ -374,15 +374,15 @@
                         <div class="flex flex-col sm:flex-row sm:items-center gap-2">
                             <span class="text-sm font-semibold text-indigo-900 whitespace-nowrap">Word 2:</span>
                             <div class="flex gap-1">
-                                <div class="bg-indigo-600 text-white rounded-lg p-2 w-12 h-14 flex flex-col items-center justify-center shadow-md">
+                                <div class="bg-indigo-700 text-white rounded-lg p-2 w-12 h-14 flex flex-col items-center justify-center shadow-md">
                                     <div class="text-xl font-bold">D</div>
                                     <div class="text-xs opacity-90">2</div>
                                 </div>
-                                <div class="bg-indigo-600 text-white rounded-lg p-2 w-12 h-14 flex flex-col items-center justify-center shadow-md">
+                                <div class="bg-indigo-700 text-white rounded-lg p-2 w-12 h-14 flex flex-col items-center justify-center shadow-md">
                                     <div class="text-xl font-bold">O</div>
                                     <div class="text-xs opacity-90">1</div>
                                 </div>
-                                <div class="bg-indigo-600 text-white rounded-lg p-2 w-12 h-14 flex flex-col items-center justify-center shadow-md">
+                                <div class="bg-indigo-700 text-white rounded-lg p-2 w-12 h-14 flex flex-col items-center justify-center shadow-md">
                                     <div class="text-xl font-bold">G</div>
                                     <div class="text-xs opacity-90">2</div>
                                 </div>
@@ -397,7 +397,7 @@
                 <div class="flex justify-center pt-4 border-t border-gray-200 mt-6">
                     <button 
                         id="close-help-modal-btn"
-                        class="px-8 py-3 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition-colors"
+                        class="px-8 py-3 bg-indigo-700 text-white font-semibold rounded-lg hover:bg-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2 transition-colors"
                     >
                         Got it
                     </button>
@@ -407,19 +407,19 @@
     </div>
 
     <!-- Error Modal -->
-    <div id="error-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="error-modal-title">
+    <div id="error-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="error-modal-title" aria-describedby="error-modal-message">
         <div class="bg-white rounded-lg shadow-xl p-8 max-w-md w-full mx-4 relative">
             <button 
                 id="close-error-modal"
-                class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1"
+                class="absolute top-4 right-4 text-gray-600 hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded-full p-1"
                 aria-label="Close modal"
             >
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                 </svg>
             </button>
             <h2 id="error-modal-title" class="text-3xl font-bold text-red-900 mb-4 text-center">Not quite right</h2>
-            <p class="text-lg text-red-800 mb-6 text-center">Try again!</p>
+            <p id="error-modal-message" class="text-lg text-red-800 mb-6 text-center">Try again!</p>
             <div class="flex justify-center">
                 <button 
                     id="close-error-modal-btn"
@@ -556,8 +556,8 @@
         }
     </script>
 
-    <footer class="text-center py-6 text-gray-400 text-xs">
-        © <a href="https://bobbieallsop.co.uk" target="_blank" rel="noopener noreferrer" class="underline hover:text-gray-300 transition-colors">Bobbie Allsop</a> created Dec 2025
+    <footer class="text-center py-6 text-gray-700 text-xs">
+        © <a href="https://bobbieallsop.co.uk" target="_blank" rel="noopener noreferrer" class="underline hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded transition-colors">Bobbie Allsop</a> created Dec 2025
     </footer>
 </body>
 </html>
